--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,23 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  min-height: 10rem;
+  padding-top: 4rem;
+  font-family: 'Maven Pro', sans-serif;
+  color: default-color;
+}
+
+@media (max-width: 768px) {
+  body {
+    padding-top: 3rem;
+  }
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  margin-bottom: .5rem;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.2;
+  color: inherit;
 }
