--- a/src/css/Spacers.css
+++ b/src/css/Spacers.css
@@ -2,3 +2,8 @@
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
+
+.padding-vertical-5 {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
