--- a/src/css/Spacers.css
+++ b/src/css/Spacers.css
@@ -7,3 +7,8 @@
     padding-top: 3rem;
     padding-bottom: 3rem;
 }
+
+.padding-horizontal-4 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
