--- a/src/css/Spacers.css
+++ b/src/css/Spacers.css
@@ -3,6 +3,10 @@
     padding-bottom: 0.5rem;
 }
 
+.padding-bottom-5 {
+    padding-bottom: 3rem;
+}
+
 .padding-vertical-5 {
     padding-top: 3rem;
     padding-bottom: 3rem;
