--- a/src/css/Buttons.css
+++ b/src/css/Buttons.css
@@ -17,7 +17,12 @@ button {
     font-size: 1rem;
     line-height: 1.5;
     border-radius: .25rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.btn-block {
+    display: block;
+    width: 100%;
 }
 
 .btn:not(:disabled):not(.disabled) {
@@ -29,13 +34,31 @@ button {
     background-color: #343a40;
     border-color: #343a40;
 }
+
 .btn-dark:hover {
     color: #fff;
     background-color: #23272b;
     border-color: #1d2124;
-  }
-  
+}
+
 .btn-dark:focus, .btn-dark.focus {
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
+}
+
+.btn-light {
+    color: #212529;
+    background-color: #f8f9fa;
+    border-color: #f8f9fa;
+}
+
+.btn-light:hover {
+    color: #212529;
+    background-color: #e2e6ea;
+    border-color: #dae0e5;
+}
+
+.btn-light:focus, .btn-light.focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5);
 }
