--- a/src/containers/WelcomePage/SaveTheDate/SaveTheDate.css
+++ b/src/containers/WelcomePage/SaveTheDate/SaveTheDate.css
@@ -24,7 +24,7 @@
 }
 
 #save-the-date h1 {
-    font-family: 'Cedarville Cursive', cursive;
+    font-family: 'Amatic SC', cursive;
     font-size: 6rem;
 }
 
@@ -64,7 +64,7 @@
 }
 
 #kb-circle>span:first-child {
-    font-family: 'Cedarville Cursive', cursive;
+    font-family: 'Amatic SC', cursive;
     font-size: 3rem;
     line-height: 0.8;
 }
