--- a/src/containers/WelcomePage/Welcome/Welcome.css
+++ b/src/containers/WelcomePage/Welcome/Welcome.css
@@ -19,7 +19,7 @@
 }
 
 #guest-name {
-    font-family: 'Cedarville Cursive', cursive;
+    font-family: 'Amatic SC', cursive;
     font-size: 5rem;
 }
 
