--- a/src/containers/WelcomePage/SaveTheDate/SaveTheDate.css
+++ b/src/containers/WelcomePage/SaveTheDate/SaveTheDate.css
@@ -44,27 +44,74 @@
 
 #kb-circle-row {
     display: flex;
-    flex-flow: column;
+    flex-flow: row;
     align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-#kb-circle {
+#about-us-circle {
+    background-image: url('/img/kiss.jpg');
+    background-size: 240px;
+}
+#champagne-circle {
+    background-image: url('/img/champagne.jpg');
+    background-size: 400px;
+    background-repeat: no-repeat;
+    background-position-x: -80px;
+}
+
+.circle-overlay {
+    position: absolute;
     display: flex;
     flex-flow: column;
     justify-content: center;
-    background: rgba(255, 200, 73, 0.9);
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,199,168,0.3);
+    transition: 0.5s ease-in-out;
+}
+
+.circle-overlay:hover {
+    background-color: rgba(255,199,168,1);
+}
+
+.photo-circle {
+    transition: 0.6s ease-in-out;
+    border: 3px solid rgb(255,199,168);
+    z-index: 1;
+}
+.kb-circle {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
     border-radius: 50%;
     text-align: center;
     height: 240px;
     width: 240px;
     position: relative;
-    transition: 0.5s ease-in-out;
     color: white;
     font-size: 1.2rem;
+    margin: 2rem;
+    overflow: hidden;
 }
 
-#kb-circle>span:first-child {
+#date-circle {
+    background: rgba(255, 200, 73, 0.9);
+    z-index: 2;
+}
+
+.kb-circle .circle-content {
     font-family: 'Amatic SC', cursive;
     font-size: 3rem;
     line-height: 0.8;
+}
+
+@media(min-width: 768px) {
+    #about-us-circle{
+        transform: translateX(127%);
+    }
+    #champagne-circle{
+        transform: translateX(-127%);
+    }
 }
