--- a/src/css/Container.css
+++ b/src/css/Container.css
@@ -29,3 +29,35 @@
     max-width: 1140px;
   }
 }
+
+.container-wide {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 576px) {
+  .container-wide {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container-wide {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container-wide {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container-wide {
+    max-width: 80%;
+  }
+}
