--- a/src/containers/OurStory/StoryImage/StoryImage.css
+++ b/src/containers/OurStory/StoryImage/StoryImage.css
@@ -1,19 +1,18 @@
 .story-image {
-    width: 32%;
-    margin-bottom: 2rem;
-    background-color: #333;
-    border-radius: 10px;
+    position: relative;
+    width: 100%;
+    z-index: 1;
+    box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
+    width: 100%;
+    height: 200px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 @media(max-width:768px) {
     .story-image {
         width: 100%;
     }
-}
-.story-image img {
-    width: 100%;
-    display: block;
-    padding-right: 5px;
-    padding-left: 5px;
 }
 .img-caption {
     color: white;
@@ -28,10 +27,6 @@
     border-radius: 0 0 10px 10px
 }
 
-.image-plus-overlay {
-    position: relative;
-    z-index: 1;
-}
 .story-image-overlay {
     position: absolute;
     display: flex;
@@ -42,12 +37,12 @@
     z-index: 2;
     opacity: 0;
     transition: 0.2s ease-in;
-    cursor: pointer;
 }
 
-.story-image-overlay:hover {
+/* .slick-center .story-image-overlay:hover {
+    cursor: pointer;
     opacity: 1
-}
+} */
 
 @media(max-width:768px) {
     .story-image-overlay {
@@ -66,5 +61,25 @@
 .story-image-overlay span {
     color: white;
     font-size: 3rem;
-    z-index: 3;
+    z-index: 999;
+}
+
+.story-image {
+    transition: all 300ms ease;
+    opacity: 0.7;
+}
+
+.slick-center .story-image {
+    opacity: 1;
+}
+
+.slick-slide {
+    position: relative;
+    z-index: 6;
+}
+.slick-center {
+    z-index: 10;
+}
+.slick-center + .slick-slide {
+    z-index: 6;
 }
