--- a/src/containers/OurStory/StoryImage/StoryImage.css
+++ b/src/containers/OurStory/StoryImage/StoryImage.css
@@ -4,7 +4,7 @@
     z-index: 1;
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
     width: 100%;
-    height: 200px;
+    height: 30vh;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
