--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -8,11 +8,18 @@
     right: 0;
     left: 0;
     z-index: 1030;
+}
+
+#toolbar-inner {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 1rem 2rem;
 }
 
 @media(max-width: 768px) {
-    #toolbar {
+    #toolbar-inner {
         padding: 0.5rem 1rem;
     }
 }
