--- a/src/css/Buttons.css
+++ b/src/css/Buttons.css
@@ -31,7 +31,7 @@ button {
 
 .btn-dark {
     color: #fff;
-    background-color: #343a40;
+    background-color: #4A4A4A;
     border-color: #343a40;
 }
 
