--- a/src/containers/Rsvp/Rsvp.css
+++ b/src/containers/Rsvp/Rsvp.css
@@ -19,6 +19,10 @@
 
 #final-rsvp .card {
     display: flex;
+    transition: transform 2s;
+}
+#final-rsvp .card.flipped {
+    transform: translateX(-25%);
 }
 
 .page-wrapper {
@@ -66,14 +70,44 @@
 }
 
 .page1-back {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     position:absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
     transform: rotateY(180deg) translateZ(1px);
     backface-visibility: hidden;
+}
+
+.page1-back h1 {
+    font-family: 'Amatic SC', sans-serif;
+    font-size: 50px;
+    margin-top: 60%;
+}
+.page1-back img {
+    display: block;
+    margin: 20% auto 0 auto;
+    width: 25px;
+}
+.page1-back .eventInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10%;
+}
+
+.page1-back .eventInfo button {
+    margin-top: 1rem;
 }
 
 .page1-front{
     position:absolute;
     width: 100%;
+    height: 100%;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0) 90%, rgba(47, 47, 47, 0.12));
     backface-visibility: hidden;
     transform:  translateZ(1px);
@@ -135,6 +169,7 @@
 
 .page2 h1 {
     font-size: 20px;
+    margin-bottom: 0;
 }
 
 .page2 h2 {
@@ -142,7 +177,11 @@
     font-size: 14px;
     border-bottom: 1px solid #fdc655;
     margin-bottom: 1rem;
-    margin-top: 1rem;
+    margin-top: 0.4rem;
+}
+
+.page2 .joinus {
+    margin-bottom: 1rem;
 }
 
 .page2 input {
@@ -166,7 +205,7 @@
 }
 
 .page2 .attendance {
-    margin-top: 0.5rem;
+    margin-top: 1rem;
     display: flex;
     flex-direction: column;
     text-align: left;
@@ -176,8 +215,12 @@
     margin-top: 0.8rem;
 }
 
+.numberSelector {
+    margin-bottom: 1rem;
+}
+
 .page2 .disco {
-    margin: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 .page2 .diet {
