--- a/src/containers/Rsvp/Rsvp.css
+++ b/src/containers/Rsvp/Rsvp.css
@@ -164,6 +164,15 @@
     display: flex;
     flex-flow: column;
     align-items: center;
+}
+
+.page2::before {
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
     background-image: linear-gradient(to left, rgba(223, 223, 223, 0), rgba(227, 227, 227, 0) 92%, rgba(108, 108, 108, 0.06));
 }
 
